--- a/commons/config.ini
+++ b/commons/config.ini
@@ -10,3 +10,14 @@ host = 127.0.0.1
 user = root
 pass = root
 dbname = demodb
+
+[socket]
+host = 127.0.0.1
+port = 8888
+
+[reports]
+path = testReports
+title = testProject演示测试报告
+desc = 描述一下测试场景和环境
+casespath = testCases
+casespartten = testcase_
